fix social layout issue

--- a/app/components/transition/styles.scss
+++ b/app/components/transition/styles.scss
@@ -22,3 +22,8 @@
     font-weight: bold;
   }
 }
+
+.facebook-container {
+  width: 220px !important;
+  overflow-x: auto;
+}
